--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,12 @@ jobs:
     # Runs a single command using the runners shell
     - name: Build
       run: npm install && npm run build
+    - name: Deploy to server
+      uses: easingthemes/ssh-deploy@v2.0.7
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+        ARGS: "-rltgoDzvO --delete"
+        SOURCE: "dist/"
+        REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+        REMOTE_USER: ${{ secrets.REMOTE_USER }}
+        TARGET: ${{ secrets.REMOTE_TARGET }}
